update schedule visible toggle

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -94,7 +94,7 @@
         </svg>
     </div>
     <ul class="link-list">
-        <div id="schedule-past"></div>
+        <div id="schedule-past" style="display: none;"></div>
         <div id="schedule"></div>
     </ul>
 </div>
