update schedule past color

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -97,6 +97,12 @@
         <div id="schedule-past" style="display: none;"></div>
         <div id="schedule"></div>
     </ul>
+    <style>
+        #schedule-past * {
+            color: #777777;
+            fill: #777777;
+        }
+    </style>
 </div>
 
 <script>
