update schedule cache time

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -442,7 +442,7 @@
             const target_sheet = "web-articles";
             const url = apiurl + "?target=" + target_sheet;
 
-            // キャッシュ保持時間（ミリ秒）→ 12時間 = 12 * 60 * 60 * 1000
+            // キャッシュ保持時間（ミリ秒）
             const CACHE_DURATION = 12 * 60 * 60 * 1000;
             const CACHE_KEY = "web_articles_cache";
             const TIMESTAMP_KEY = "web_articles_cache_time";
