update schedule tag

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -22,6 +22,7 @@
     <div id="filters">
         <div class="filter-group" style="margin-bottom: 0;">
             <div class="filter-toggle active" data-key="all">ALL</div>
+            <div class="filter-toggle" data-key="release">RELEASE</div>
             <div class="filter-toggle" data-key="live">LIVE</div>
             <div class="filter-toggle" data-key="event">EVENT</div>
             <div class="filter-toggle" data-key="tv">TV</div>
