--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             }
         }
 
-        #bg_4 {
+        /* #bg_4 {
             background-image: url("/static/bg/bg-4.png");
 
             @media screen and (min-width: 767px) {
                 background-image: url("/static/bg/bg-4-pc.png");
             }
-        }
+        } */
     </style>
     <!-- tatsu head end -->
     <title>誘蛾灯の導き</title>
@@ -258,6 +258,12 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
                     </a>
                 </div>
                 <div class="menu_element">
+                    <a href="/?p=schedule" class="menu_a">
+                        <div class="menu_name">スケジュール</div>
+                        <div class="menu_sub">- schedule -</div>
+                    </a>
+                </div>
+                <div class="menu_element">
                     <a href="/?p=articles" class="menu_a">
                         <div class="menu_name">全記事</div>
                         <div class="menu_sub">- articles -</div>
@@ -312,7 +318,7 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
 
             </div>
 
-            <div class="contents_block">
+            <div class="contents_block contents_block_donation">
                 <p class="donation-text">＼このサイトが役に立ったら／</p>
                 <div class="donation-block">
                     <a href="/?p=donation" class="donation-button" style="margin-top: 0;">
