css class name 'media-flex'

--- a/pages/phanart/guoxoua-nametag.html
+++ b/pages/phanart/guoxoua-nametag.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="contents_block">
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-10-mona.png" alt="" loading="lazy" class="popupimg-popup-img">
             <p class="nametag-member">🩷</p>
@@ -79,7 +79,7 @@
 </div>
 
 <div class="contents_block">
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-20-miu-mona.png" alt="" loading="lazy"
                 class="popupimg-popup-img">
