--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -27,7 +27,7 @@
 <div class="contents_block">
     <h3>フリーアイコン</h3>
     <p>アイコンとしての使用⭕️ アイコン以外での使用❌ 自作発言❌</p>
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-21mona.png" alt="もなアイコン" loading="lazy"
                 class="popupimg-popup-img">
@@ -114,7 +114,7 @@
             href="https://x.com/search?q=%23%E3%83%8F%E3%82%A4%E3%83%8D%E8%87%AA%E5%B7%B1%E7%B4%B9%E4%BB%8B%E3%82%AB%E3%83%BC%E3%83%89">#ハイネ自己紹介カード</a>
         を付けてポストしてね！（1枚目が新版です！）
     </p>
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" loading="lazy"
                 class="popupimg-popup-img" style="object-position: 50% 0%; /* 左,上 */">
@@ -132,7 +132,7 @@
 </div>
 
 <div class="contents_block">
-    <div class="phanart-container" style="justify-content: center;">
+    <div class="media-flex-container" style="justify-content: center;">
         <div class="popupimg-wrapper" style="width: 50%;">
             <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" loading="lazy"
                 class="popupimg-popup-img">
@@ -144,7 +144,7 @@
 </div>
 
 <div class="contents_block">
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy"
                 class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
