--- a/pages/phanart/hisui-special.html
+++ b/pages/phanart/hisui-special.html
@@ -29,7 +29,7 @@
 
 
 <div class="contents_block">
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/hisui-special/uxwou_4-001.jpg" alt="" loading="lazy"
                 class="popupimg-popup-img protected-img" style="object-position: 50% 0%; /* 左,上 */">
