--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="contents_block">
-    <div class="phanart-container">
+    <div class="media-flex-container">
         <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/oan/001.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1817212985276039491"></a>
