add watermark tool

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -517,6 +517,22 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
+        </svg>2025.09.06
+        <p><a href="/?p=watermark">透かし加工ツール</a> を追加しました。画像へIDなどを重ねる加工にご利用いただけます。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.07.17
+        <p><a href="/?p=schedule">スケジュール</a> 機能を追加しました。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
         </svg>2025.06.26
         <p>トップページにメンバーのSNSリンクを追加しました。</p>
     </div>
@@ -525,17 +541,9 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
-        </svg>2025.05.31
-        <p><a href="/?p=phanart.hisui-special">灯翠さん ファンアート</a> まとめページを公開しました。</p>
-    </div>
-    <hr>
-
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.04.03
-        <p><a href="/?p=play.haine-test">ハイネ共通テスト</a>
-            を公開しました。</p>
+        </svg>2025.06.19
+        <p>本サイト運営による新アカウント <a href="https://x.com/siita_days">This Day in Phantom Siita</a> が開設されました。</p>
+        <p>「その日にファントムシータに何があったのか」を自動で投稿しています。</p>
     </div>
     <hr>
 
@@ -571,7 +579,22 @@
         </a>
 
     </ul>
-    <!-- <div class="link-btn-div">
-        <a href="/?p=play" class="link-btn-a">すべて見る</a>
-    </div> -->
+
+    <br>
+    <h3 class="glitch-text">便利ツール</h3>
+    <hr class="hr-no-margin">
+
+    <ul class="link-list">
+
+        <a href="/?p=watermark" class="link-list-a">
+            <li>
+                <p>
+                    <svg role="img" aria-label="蝶々">
+                        <use href="#butterfly"></use>
+                    </svg>透かし加工
+                </p>
+            </li>
+        </a>
+
+    </ul>
 </div>
