--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,12 +5,40 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
+<div class="contents_block" id="20250906">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.09.06
+        <p><a href="/?p=watermark">透かし加工ツール</a> を追加しました。画像へIDなどを重ねる加工にご利用いただけます。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250717">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.07.17
+        <p><a href="/?p=schedule">スケジュール</a> 機能を追加しました。</p>
+    </div>
+</div>
+
 <div class="contents_block" id="20250626">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.06.26
         <p>トップページにメンバーのSNSリンクを追加しました。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250619">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.06.19
+        <p>本サイト運営による新アカウント <a href="https://x.com/siita_days">This Day in Phantom Siita</a> が開設されました。</p>
+        <p>「その日にファントムシータに何があったのか」を自動で投稿しています。</p>
     </div>
 </div>
 
@@ -38,7 +66,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.03.11
-        <p><a href="/?p=articles.2008-moth-to-a-flame-vlog">Phantom Siita 1st WORLD TOUR “Moth to a flame” 公式の投稿まとめ</a>
+        <p><a href="/?p=articles.vlog-moth-to-a-flame">Phantom Siita 1st WORLD TOUR “Moth to a flame” 公式の投稿まとめ</a>
             を公開しました。</p>
     </div>
 </div>
@@ -127,7 +155,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.18
-        <p>新規記事 <a href="/?p=articles.2007-akuma-night-video">悪魔 Night Duel Buster 動画まとめ</a>
+        <p>新規記事 <a href="/?p=articles.live-akuma-night-video">悪魔 Night Duel Buster 動画まとめ</a>
             を公開しました。ファンにより撮影された動画の投稿をまとめています。</p>
         <p>またフィルター機能により、メンバーや曲を絞って検索をすることが可能です。</p>
     </div>
@@ -138,7 +166,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.13
-        <p>新規記事 <a href="/?p=articles.0002-setlist">セットリスト</a> を公開しました。ライブの際に更新します。</p>
+        <p>新規記事 <a href="/?p=articles.setlist">セットリスト</a> を公開しました。ライブの際に更新します。</p>
     </div>
 </div>
 
@@ -147,19 +175,19 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.09
-        <p>新規記事 <a href="/?p=articles.0003-hainenazo">ハイネ謎解き</a>
+        <p>新規記事 <a href="/?p=articles.hainenazo">ハイネ謎解き</a>
             を公開しました。「モナリザの横顔」にて配布された謎解きの再現を掲載しています。</p>
     </div>
 </div>
 
-<div class="contents_block" id="20241119">
+<!-- <div class="contents_block" id="20241119">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.11.19
         <p>新規記事 <a href="/?p=articles.1001-otomodachi">おともだち</a> を公開しました。</p>
     </div>
-</div>
+</div> -->
 
 <div class="contents_block" id="20241113">
     <div class="notice-div">
