--- a/pages/watermark.html
+++ b/pages/watermark.html
@@ -38,15 +38,26 @@
 
     let originalImg = null; // 元画像保持
 
+    // Cookie に保存する関数（1年有効）
+    function saveCookie(text) {
+        const expireDate = new Date();
+        expireDate.setFullYear(expireDate.getFullYear() + 1);
+        document.cookie = `watermarkText=${encodeURIComponent(text)}; expires=${expireDate.toUTCString()}; path=/`;
+    }
+
     // ページロード時に Cookie から透かし文字を復元
     window.addEventListener("load", () => {
         const cookies = document.cookie.split("; ").reduce((acc, cur) => {
-            const [k, v] = cur.split("=");
+            const index = cur.indexOf("=");
+            const k = cur.slice(0, index).trim();
+            const v = cur.slice(index + 1);
             acc[k] = decodeURIComponent(v);
             return acc;
         }, {});
         if (cookies["watermarkText"]) {
             wmInput.value = cookies["watermarkText"];
+            // 復元した際にも再度 Cookie に書き込み、期限を更新
+            saveCookie(cookies["watermarkText"]);
         }
     });
 
@@ -66,25 +77,15 @@
         reader.readAsDataURL(file);
     });
 
-    // input の変更時にcookieに保存
+    // input の変更時に Cookie に保存
     wmInput.addEventListener("input", () => {
-        const text = wmInput.value;
-        const expireDate = new Date();
-        expireDate.setFullYear(expireDate.getFullYear() + 1);
-        document.cookie = `watermarkText=${encodeURIComponent(text)}; expires=${expireDate.toUTCString()}; path=/`;
+        saveCookie(wmInput.value);
     });
 
     // input のフォーカスが外れたときに透かしを更新
     wmInput.addEventListener("blur", () => {
-        const text = wmInput.value;
-
-        // Cookie に保存（1年）
-        const expireDate = new Date();
-        expireDate.setFullYear(expireDate.getFullYear() + 1);
-        document.cookie = `watermarkText=${encodeURIComponent(text)}; expires=${expireDate.toUTCString()}; path=/`;
-
         if (originalImg) {
-            drawWithWatermark(originalImg, text);
+            drawWithWatermark(originalImg, wmInput.value);
         }
     });
 
@@ -93,44 +94,42 @@
         canvas.width = img.width;
         canvas.height = img.height;
 
-        // 1. 元画像を描画
+        // 元画像描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         ctx.drawImage(img, 0, 0);
 
-        // 2. ステップを計算（長辺を10分割）
+        // 長辺を10分割
         const longSide = Math.max(img.width, img.height);
         const step = longSide / 10;
 
-        // 3. フォントサイズを決定（文字列が1マスに収まるように調整）
+        // フォントサイズ決定
         let fontSize = step * 0.8;
         ctx.font = `${fontSize}px "PixelMplus12 Regular", "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "MS Pゴシック", "MS PGothic", sans-serif`;
         let textWidth = ctx.measureText(text).width;
-
         if (textWidth > step * 0.9) {
             fontSize = (step * 0.9 / textWidth) * fontSize;
             ctx.font = `${fontSize}px "PixelMplus12 Regular", "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "MS Pゴシック", "MS PGothic", sans-serif`;
         }
 
-        // 4. 文字色をグレー50%、透明度50%に設定
+        // 文字色と透明度
         ctx.fillStyle = "rgba(128,128,128,0.5)";
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
 
-        // 5. 中央基準で敷き詰める
+        // 中央基準で敷き詰め
         const centerX = img.width / 2;
         const centerY = img.height / 2;
-
         for (let y = centerY - step * 10; y <= centerY + step * 10; y += step) {
             for (let x = centerX - step * 10; x <= centerX + step * 10; x += step) {
                 ctx.save();
                 ctx.translate(x, y);
-                ctx.rotate(-Math.PI / 4); // -45度回転
+                ctx.rotate(-Math.PI / 4);
                 ctx.fillText(text, 0, 0);
                 ctx.restore();
             }
         }
 
-        // 6. canvas → img に変換して表示
+        // canvas → img に変換して表示
         resultImg.src = canvas.toDataURL("image/png");
     }
 </script>
