update watermark 説明文の追加

--- a/pages/watermark.html
+++ b/pages/watermark.html
@@ -4,6 +4,10 @@
 
 <div class="contents_block">
     <input type="file" id="uploader" accept="image/*"><br>
+</div>
+
+<div class="contents_block">
+    <p style="font-size: small;">重ねる文字を変更できます</p>
     <input type="text" id="wmText" placeholder="透かし文字を入力" value="SAMPLE">
 </div>
 
