update setlist, other

--- a/pages/about.html
+++ b/pages/about.html
@@ -65,6 +65,12 @@
     <p>私については、<a href="/?p=tatsu.profile">こちら</a>。 </p>
 </div>
 
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="https://forms.gle/4z2bVQc2jeVsYnQy9"></a>
+    <h3 class="glitch-text">ご利用者様アンケート</h3>
+    <p class="keep-all-break-word">お時間がありましたら<wbr>アンケートへのご回答に<wbr>ご協力をお願いします。</p>
+</div>
+
 <div class="contents_block">
     <h3>ご寄付について</h3>
     <p>いつもご利用いただきありがとうございます。</p>
