--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -28,4 +28,12 @@
     <p>灯翠ちゃんのファンアートをまとめてご紹介しています。</p>
 </div>
 
+<div class="contents_block">
+    <h1>#ふぁんとむ怪覧会</h1>
+    <p>公式ファンアートタグです。</p>
+    <div class="tweet-container">
+        <a class="twitter-tweet-data" href="https://x.com/PhantomSiita/status/1963149971651207170"></a>
+    </div>
+</div>
+
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
