change phanart png -> jpg

--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -262,6 +262,11 @@
         <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/oan/054.jpg" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1967253961318244375"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/055.jpg" alt="" loading="lazy" class="popupimg-popup-img protected-img"
+                style="object-position: 50% 50%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1966898918975025294"></a>
         </div>
     </div>
