add phanart sanketsu

--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -22,6 +22,12 @@
     <img src="/static/img/phanart/oan/000-cover.jpg" alt="" class="phanart-artist-cover">
 </div>
 
+<div class="contents_block contents_block_has_a phanart-artist-block">
+    <a class="contents_block_a" href="/?p=phanart.sanketsu"></a>
+    <h3>酸欠</h3>
+    <img src="/static/img/phanart/sanketsu/000-cover.jpg" alt="" class="phanart-artist-cover">
+</div>
+
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="/?p=phanart.hisui-special"></a>
     <h2>灯翠ちゃん</h2>
