set kv aspect ratio

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -21,6 +21,7 @@
 <style>
     .kv-sp {
         display: block;
+        aspect-ratio: 2476 / 2988;
 
         @media screen and (min-width: 767px) {
             display: none;
@@ -29,6 +30,7 @@
 
     .kv-pc {
         display: none;
+        aspect-ratio: 5246 / 2988;
 
         @media screen and (min-width: 767px) {
             display: block;
