update raffle-sim 100回

--- a/pages/play/raffle-sim.html
+++ b/pages/play/raffle-sim.html
@@ -87,6 +87,7 @@
         padding: 6px;
         border-radius: 6px;
         border: 1px solid #2a2a2a;
+        max-height: 100vh;
     }
 
     .result-item {
@@ -129,10 +130,11 @@
     <strong>操作</strong>
     <div class="controls">
         <div>
-            <button class="draw-btn primary" data-count="1">購入 ×1</button>
-            <button class="draw-btn primary" data-count="5">購入 ×5</button>
-            <button class="draw-btn primary" data-count="10">購入 ×10</button>
-            <button class="draw-btn primary" data-count="30">購入 ×30</button>
+            <button class="draw-btn primary" data-count="1">1回</button>
+            <button class="draw-btn primary" data-count="5">5回</button>
+            <button class="draw-btn primary" data-count="10">10回</button>
+            <button class="draw-btn primary" data-count="30">30回</button>
+            <button class="draw-btn primary" data-count="100">100回</button>
         </div>
         <div class="right">
             <button id="show-config">確率・景品を表示</button>
