fix disco-otomodachi test

--- a/pages/discography/otomodachi.html
+++ b/pages/discography/otomodachi.html
@@ -11,13 +11,7 @@
 
 <div class="contents_block">
     <h3 class="glitch-text">Music Video</h3>
-
-    <div class="yt-container">
-        <a class="yt-data" href="https://youtu.be/jMsbCJ6NFS0"></a>
+    <div class="yt-video-container">
+        <a class="yt-video-data" href="https://youtu.be/jMsbCJ6NFS0?si=C0M5fonpzodrPhjF"></a>
     </div>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/jMsbCJ6NFS0?si=0dWj-5iHsYsvbLhl"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
