--- a/pages/discography/otomodachi.html
+++ b/pages/discography/otomodachi.html
@@ -12,6 +12,6 @@
 <div class="contents_block">
     <h3 class="glitch-text">Music Video</h3>
     <div class="yt-video-container">
-        <a class="yt-video-data" href="https://youtu.be/jMsbCJ6NFS0?si=C0M5fonpzodrPhjF"></a>
+        <a class="yt-video-data" href="https://youtu.be/ElWhuHTkbik"></a>
     </div>
 </div>
